...
  isSelected?: boolean;
  onPress: () => void;
}

const ListItem = ({children, onPress, isSelected = true}: ListItemProps) => {
  return (
    <Pressable onPress={onPress} accessibilityLabel={isSelected ? "selectedListItem" : "deselectedListItem"}>
      <Box py={2} bgColor={isSelected ? "green.600:alpha.30" : undefined}>
        <HStack justifyContent="space-between">
          <Box
            _text={{
              fontSize: "md",
              fontWeight: "medium",
...

  const handleAddExercises = () => {
    navigation.navigate("createWorkout", {selectedExercises: getSelected()});
  };

  return (
    <Screen testID="addExerciseScreen">
      <Header
        leftContent={<CancelButton onPress={handleBack} />}
        rightContent={<HeaderButton onPress={handleAddExercises}>Add</HeaderButton>}
      />
      <VStack space={2}>
        <Center justifyContent="flex-start">
...
