...

export const NameInput: FC<InputProps> = ({error, ...props}) => {
  return (
    <FormControl isRequired isInvalid={!!error}>
      <Input
        {...props}
        testID="nameInput"
        variant="rounded"
        placeholder="Name"
        keyboardType="default"
        autoCorrect={false}
        InputLeftElement={
          <NBIcon
...
